[package]
name = "hello-world"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.0.1-preview.1"
serde = { version = "1.0", features = ["derive"] }


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
